Use the aid data with location prefix, made the design script work with this data and rename, restructure distance calculations to isolate the distance functions in a new module, stop maintaining the demo notebooks -- delete them.

--- a/.gitignore
+++ b/.gitignore
@@ -159,7 +159,5 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-data/distance.csv
-data/design.csv
-data/demo_design.csv
-data/demo_distance.csv
+data/distance*.csv
+data/design*.csv
